--- a/answers/hw1/style.css
+++ b/answers/hw1/style.css
@@ -25,9 +25,10 @@ body{
 	height:200px;
 	display: inline-block;
 	list-style: none;
-	padding-left: 20px;
-	padding-right: 20px;
-	padding-bottom: 90px;
+	margin: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-bottom: 80px;
 	padding-top: 10px;
 	position: relative;
 	left: 10%;
