--- a/answers/hw3/sass/style.sass
+++ b/answers/hw3/sass/style.sass
@@ -8,10 +8,10 @@ body
 	padding: 0
 	margin:0
 
-body
-	background-image: url('../../images/background-image.jpg')
-	background-attachment:fixed
-	color:$white
+	body
+		background-image: url('../../images/background-image.jpg')
+		background-attachment:fixed
+		color:$white
 
 #container
 	width: 100%
@@ -30,14 +30,12 @@ body
 	list-style: none
 	margin:5px 10px 15px 20px
 	padding-bottom: 98px
-
 	position: relative
 	left: 10%
 
-.item:hover,
-.avatar:hover
-	box-shadow: 1px 3px 3px 3px $black
-	filter: contrast(100%) brightness(140%)
+	.item:hover
+		box-shadow: 1px 3px 3px 3px $black
+		filter: contrast(100%) brightness(140%)
 
 .avatar
 	background: $black
@@ -48,6 +46,9 @@ body
 	height: 105px
 	left: 0px	
 
+	.avatar:hover
+		box-shadow: 1px 3px 3px 3px $black
+		filter: contrast(100%) brightness(140%)
 .img
 	border-radius: 50%
 	background-size: 50px 50px
