--- a/answers/hw4/sass/style.sass
+++ b/answers/hw4/sass/style.sass
@@ -4,7 +4,6 @@ $black-background:rgba(0,0,0,.5)
 
 html,
 body
-
 	height: 100%
 	padding: 0
 	margin:0
@@ -21,22 +20,16 @@ body
 	background-size: cover
 	background:$black-background
 	display: flex
-	display: -webkit-box  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
-  	display: -ms-flexbox  /* TWEENER - IE 10 */
-  	display: -webkit-flex /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
 	justify-content: center 
 
 .item
-	/*background-image: url('../images/game-preview.jpg')*/ /*遊戲預覽畫面*/
 	background-repeat:no-repeat
 	width:300px 
 	height:200px
 	display: inline-block
 	list-style: none
-	/* Notice */
-	margin:5px 10px 15px 20px/*上 右 下 左*/
+	margin:5px 10px 15px 20px
 	padding-bottom: 98px
-
 	position: relative
 	left: 10%
 
@@ -49,7 +42,7 @@ body
 	background: $black
 	opacity: 0.6
 	position: absolute
-	top: 198px /*180px*/
+	top: 198px 
 	width: 300px
 	height: 105px
 	left: 0px
