--- a/answers/hw4/css/style.css
+++ b/answers/hw4/css/style.css
@@ -1,71 +1,98 @@
 html,
 body{
-	height: 100%;
-	padding: 0;
-	margin:0;
+    height: 100%;
+    padding: 0;
+    margin:0;
 }
 body{
-	background-image: url('../../images/background-image.jpg'); /* background */
-	background-attachment:fixed;
-	color:#fff;
+    background-image: url('../../images/background-image.jpg'); /* background */
+    background-attachment:fixed;
+    color:#fff;
 }
 #container{
-	width: 100%;
-	z-index: -999;
-	background-size: cover;
-	background:rgba(0,0,0,.5);
-	display: flex;
-	justify-content: center; 
+    width: 100%;
+    z-index: -999;
+    background-size: cover;
+    background: rgba(0, 0, 0, .5);
+    display: flex;
+    justify-content: center;
 }
+
+#content {
+    margin: 10px auto;
+    width: 1000px;
+}
+
 .item{
-	background-repeat:no-repeat;
-	width:300px; 
-	height:200px;
-	display: inline-block;
-	list-style: none;
-	margin:5px 10px 15px 20px;
-	padding-bottom: 98px;
-	position: relative;
-	left: 10%;
+    width: 300px;
+    height: 200px;
+    display: inline-block;
+    list-style: none;
+    margin: 5px 10px 15px 20px;
+    padding-bottom: 98px;
+    position: relative;
+    left: 0;
 }
 .item:hover,
 .avatar:hover{
-	box-shadow: 1px 3px 3px 3px #000;
-	filter: contrast(100%) brightness(140%);
+    box-shadow: 1px 3px 3px 3px #000;
+    filter: contrast(100%) brightness(140%);
 }
-.avatar{
-	background: #000;
-	opacity: 0.6;
-	position: absolute;
-	top: 198px; 
-	width: 300px;
-	height: 105px;
-	left: 0px;
-	border-top:1px solid #fff;
-}
-.avatar img{
-	border-radius: 50%;
-	background-size: 50px 50px;
-	width: 50px;
-	height:50px;
-	position: relative;
-	left: 20px;
-	top:20px;
-	overflow:hidden; 
-}
-iframe{
-    border: none;
+.placeholder {
+    display: block;
+    left: 0px;
+    top: 0px;
+    position: absolute;
     width: 300px;
     height: 200px;
+}
+.avatar{
+    background: #000;
+    opacity: 0.6;
+    position: absolute;
+    top: 198px;
+    width: 300px;
+    height: 105px;
+    left: 0px;
+    border-top:1px solid #fff;
+}
+.avatar img{
+    border-radius: 50%;
+    background-size: 50px 50px;
+    width: 50px;
+    height:50px;
+    position: relative;
+    left: 20px;
+    top:20px;
+    overflow:hidden; 
+}
+.video {
+    border: none;
+    width: 100%;
+    height: 100%;
     position: absolute;
     left: 0px;
     top: 0px;
 }
+
+.video img {
+    position: relative;
+    z-index: 1;
+    opacity: 0;
+    width: 300px;
+    height: 200px;
+    transition: opacity, 0.5s, ease-out;
+}
+
 .info{
-	position: absolute;
-	left:90px;
-	top:0px;
-	display: inline-block;
-	font-size: 14px;
-	overflow: hidden;
+    position: absolute;
+    left: 90px;
+    top: 0px;
+    font-size: 15px;
+    width: 210px;
+}
+.info p{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
